--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "portphp/portphp": "1.0.x-dev",
+        "portphp/portphp": "1.2.0",
         "doctrine/dbal": "^2.4"
     },
     "autoload": {
